// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`table-interactive-visual > Alternate rows > should render with alternating row colors 1`] = `
"┌───────┬─────────────────┬──────────────┬────────────┐
│ <bold>ID   </bold> │ <bold>Name           </bold> │ <bold>Role        </bold> │ <bold>Status    </bold> │
├───────┼─────────────────┼──────────────┼────────────┤
│ [7m1    [27m │ [7mAlice          [27m │ [7mDeveloper   [27m │ [7mActive    [27m │
│ 2     │ Bob             │ Designer     │ Active     │
│ 3     │ Charlie         │ Manager      │ Inactive   │
│ 4     │ David           │ Developer    │ Active     │
│ 5     │ Eve             │ Designer     │ Active     │
└───────┴─────────────────┴──────────────┴────────────┘
<dim>Row 1/5</bold>"
`;

exports[`table-interactive-visual > Basic rendering > should render empty table 1`] = `
"┌───────┬─────────────────┬──────────────┬────────────┐
│ <bold>ID   </bold> │ <bold>Name           </bold> │ <bold>Role        </bold> │ <bold>Status    </bold> │
├───────┼─────────────────┼──────────────┼────────────┤
<dim>│                      (no data)                      │</bold>
└───────┴─────────────────┴──────────────┴────────────┘"
`;

exports[`table-interactive-visual > Basic rendering > should render table with focus on first row 1`] = `
"┌───────┬─────────────────┬──────────────┬────────────┐
│ <bold>ID   </bold> │ <bold>Name           </bold> │ <bold>Role        </bold> │ <bold>Status    </bold> │
├───────┼─────────────────┼──────────────┼────────────┤
│ [7m1    [27m │ [7mAlice          [27m │ [7mDeveloper   [27m │ [7mActive    [27m │
│ 2     │ Bob             │ Designer     │ Active     │
│ 3     │ Charlie         │ Manager      │ Inactive   │
│ 4     │ David           │ Developer    │ Active     │
│ 5     │ Eve             │ Designer     │ Active     │
└───────┴─────────────────┴──────────────┴────────────┘
<dim>Row 1/5</bold>"
`;

exports[`table-interactive-visual > Basic rendering > should render table with focus on middle row 1`] = `
"┌───────┬─────────────────┬──────────────┬────────────┐
│ <bold>ID   </bold> │ <bold>Name           </bold> │ <bold>Role        </bold> │ <bold>Status    </bold> │
├───────┼─────────────────┼──────────────┼────────────┤
│ 1     │ Alice           │ Developer    │ Active     │
│ 2     │ Bob             │ Designer     │ Active     │
│ [7m3    [27m │ [7mCharlie        [27m │ [7mManager     [27m │ [7mInactive  [27m │
│ 4     │ David           │ Developer    │ Active     │
│ 5     │ Eve             │ Designer     │ Active     │
└───────┴─────────────────┴──────────────┴────────────┘
<dim>Row 3/5</bold>"
`;

exports[`table-interactive-visual > Border styles > should render with double borders 1`] = `
"╔═══════╦═════════════════╦══════════════╦════════════╗
║ <bold>ID   </bold> ║ <bold>Name           </bold> ║ <bold>Role        </bold> ║ <bold>Status    </bold> ║
╠═══════╬═════════════════╬══════════════╬════════════╣
║ [7m1    [27m ║ [7mAlice          [27m ║ [7mDeveloper   [27m ║ [7mActive    [27m ║
║ 2     ║ Bob             ║ Designer     ║ Active     ║
║ 3     ║ Charlie         ║ Manager      ║ Inactive   ║
║ 4     ║ David           ║ Developer    ║ Active     ║
║ 5     ║ Eve             ║ Designer     ║ Active     ║
╚═══════╩═════════════════╩══════════════╩════════════╝
<dim>Row 1/5</bold>"
`;

exports[`table-interactive-visual > Border styles > should render with rounded borders 1`] = `
"╭───────┬─────────────────┬──────────────┬────────────╮
│ <bold>ID   </bold> │ <bold>Name           </bold> │ <bold>Role        </bold> │ <bold>Status    </bold> │
├───────┼─────────────────┼──────────────┼────────────┤
│ [7m1    [27m │ [7mAlice          [27m │ [7mDeveloper   [27m │ [7mActive    [27m │
│ 2     │ Bob             │ Designer     │ Active     │
│ 3     │ Charlie         │ Manager      │ Inactive   │
│ 4     │ David           │ Developer    │ Active     │
│ 5     │ Eve             │ Designer     │ Active     │
╰───────┴─────────────────┴──────────────┴────────────╯
<dim>Row 1/5</bold>"
`;

exports[`table-interactive-visual > Border styles > should render with single borders 1`] = `
"┌───────┬─────────────────┬──────────────┬────────────┐
│ <bold>ID   </bold> │ <bold>Name           </bold> │ <bold>Role        </bold> │ <bold>Status    </bold> │
├───────┼─────────────────┼──────────────┼────────────┤
│ [7m1    [27m │ [7mAlice          [27m │ [7mDeveloper   [27m │ [7mActive    [27m │
│ 2     │ Bob             │ Designer     │ Active     │
│ 3     │ Charlie         │ Manager      │ Inactive   │
│ 4     │ David           │ Developer    │ Active     │
│ 5     │ Eve             │ Designer     │ Active     │
└───────┴─────────────────┴──────────────┴────────────┘
<dim>Row 1/5</bold>"
`;

exports[`table-interactive-visual > Border styles > should render without borders 1`] = `
"<bold>ID   </bold> <bold>Name           </bold> <bold>Role        </bold> <bold>Status    </bold>
[7m1    [27m [7mAlice          [27m [7mDeveloper   [27m [7mActive    [27m
2     Bob             Designer     Active    
3     Charlie         Manager      Inactive  
4     David           Developer    Active    
5     Eve             Designer     Active    
<dim>Row 1/5</bold>"
`;

exports[`table-interactive-visual > Combined states > should render with filter + sort + selection 1`] = `
"┌───────┬─────────────────┬──────────────┬────────────┐
│ <bold>ID   </bold> │ <bold>Name ↑         </bold> │ <bold>Role        </bold> │ <bold>Status    </bold> │
├───────┼─────────────────┼──────────────┼────────────┤
│ [7m1    [27m │ [7mAlice          [27m │ [7mDeveloper   [27m │ [7mActive    [27m │
│ <cyan>4    </fg> │ <cyan>David          </fg> │ <cyan>Developer   </fg> │ <cyan>Active    </fg> │
└───────┴─────────────────┴──────────────┴────────────┘
<green>2 selected</fg> • <yellow>Filter: Developer</fg> <dim>2/5</bold> • <dim>Row 1/2</bold>"
`;

exports[`table-interactive-visual > Combined states > should render with filter mode active + existing filter 1`] = `
"┌───────┬─────────────────┬──────────────┬────────────┐
│ <bold>ID   </bold> │ <bold>Name           </bold> │ <bold>Role        </bold> │ <bold>Status    </bold> │
├───────┼─────────────────┼──────────────┼────────────┤
│ [7m1    [27m │ [7mAlice          [27m │ [7mDeveloper   [27m │ [7mActive    [27m │
│ 4     │ David           │ Developer    │ Active     │
└───────┴─────────────────┴──────────────┴────────────┘
<yellow>Filter: Devel</fg> <dim>2/5</bold> • <dim>Row 1/2</bold>
<cyan>> </fg>Devel"
`;

exports[`table-interactive-visual > Combined states > should render with sort + focus + selection 1`] = `
"┌───────┬─────────────────┬──────────────┬────────────┐
│ <bold>ID ↓ </bold> │ <bold>Name           </bold> │ <bold>Role        </bold> │ <bold>Status    </bold> │
├───────┼─────────────────┼──────────────┼────────────┤
│ 5     │ Eve             │ Designer     │ Active     │
│ <cyan>4    </fg> │ <cyan>David          </fg> │ <cyan>Developer   </fg> │ <cyan>Active    </fg> │
│ [7m3    [27m │ [7mCharlie        [27m │ [7mManager     [27m │ [7mInactive  [27m │
│ 2     │ Bob             │ Designer     │ Active     │
│ 1     │ Alice           │ Developer    │ Active     │
└───────┴─────────────────┴──────────────┴────────────┘
<green>2 selected</fg> • <dim>Row 3/5</bold>"
`;

exports[`table-interactive-visual > Compact mode > should render in compact mode 1`] = `
"┌───────┬─────────────────┬──────────────┬────────────┐
│ <bold>ID   </bold> │ <bold>Name           </bold> │ <bold>Role        </bold> │ <bold>Status    </bold> │
├───────┼─────────────────┼──────────────┼────────────┤
│ [7m1    [27m │ [7mAlice          [27m │ [7mDeveloper   [27m │ [7mActive    [27m │
│ 2     │ Bob             │ Designer     │ Active     │
│ 3     │ Charlie         │ Manager      │ Inactive   │
│ 4     │ David           │ Developer    │ Active     │
│ 5     │ Eve             │ Designer     │ Active     │
└───────┴─────────────────┴──────────────┴────────────┘
<dim>Row 1/5</bold>"
`;

exports[`table-interactive-visual > Filter states > should render empty filter results 1`] = `
"┌───────┬─────────────────┬──────────────┬────────────┐
│ <bold>ID   </bold> │ <bold>Name           </bold> │ <bold>Role        </bold> │ <bold>Status    </bold> │
├───────┼─────────────────┼──────────────┼────────────┤
<dim>│                     No results                      │</bold>
└───────┴─────────────────┴──────────────┴────────────┘
<yellow>Filter: NonExistent</fg> <dim>0/5</bold>"
`;

exports[`table-interactive-visual > Filter states > should render filtered results 1`] = `
"┌───────┬─────────────────┬──────────────┬────────────┐
│ <bold>ID   </bold> │ <bold>Name           </bold> │ <bold>Role        </bold> │ <bold>Status    </bold> │
├───────┼─────────────────┼──────────────┼────────────┤
│ [7m2    [27m │ [7mBob            [27m │ [7mDesigner    [27m │ [7mActive    [27m │
│ 5     │ Eve             │ Designer     │ Active     │
└───────┴─────────────────┴──────────────┴────────────┘
<yellow>Filter: Designer</fg> <dim>2/5</bold> • <dim>Row 1/2</bold>"
`;

exports[`table-interactive-visual > Filter states > should render in filter mode with input 1`] = `
"┌───────┬─────────────────┬──────────────┬────────────┐
│ <bold>ID   </bold> │ <bold>Name           </bold> │ <bold>Role        </bold> │ <bold>Status    </bold> │
├───────┼─────────────────┼──────────────┼────────────┤
│ [7m1    [27m │ [7mAlice          [27m │ [7mDeveloper   [27m │ [7mActive    [27m │
│ 2     │ Bob             │ Designer     │ Active     │
│ 3     │ Charlie         │ Manager      │ Inactive   │
│ 4     │ David           │ Developer    │ Active     │
│ 5     │ Eve             │ Designer     │ Active     │
└───────┴─────────────────┴──────────────┴────────────┘
<yellow>Filter: Dev</fg> <dim>5/5</bold> • <dim>Row 1/5</bold>
<cyan>> </fg>Dev"
`;

exports[`table-interactive-visual > Filter states > should render with active filter 1`] = `
"┌───────┬─────────────────┬──────────────┬────────────┐
│ <bold>ID   </bold> │ <bold>Name           </bold> │ <bold>Role        </bold> │ <bold>Status    </bold> │
├───────┼─────────────────┼──────────────┼────────────┤
│ [7m1    [27m │ [7mAlice          [27m │ [7mDeveloper   [27m │ [7mActive    [27m │
│ 4     │ David           │ Developer    │ Active     │
└───────┴─────────────────┴──────────────┴────────────┘
<yellow>Filter: Developer</fg> <dim>2/5</bold> • <dim>Row 1/2</bold>"
`;

exports[`table-interactive-visual > Selection states > should render with all rows selected 1`] = `
"┌───────┬─────────────────┬──────────────┬────────────┐
│ <bold>ID   </bold> │ <bold>Name           </bold> │ <bold>Role        </bold> │ <bold>Status    </bold> │
├───────┼─────────────────┼──────────────┼────────────┤
│ <cyan>1    </fg> │ <cyan>Alice          </fg> │ <cyan>Developer   </fg> │ <cyan>Active    </fg> │
│ <cyan>2    </fg> │ <cyan>Bob            </fg> │ <cyan>Designer    </fg> │ <cyan>Active    </fg> │
│ [7m3    [27m │ [7mCharlie        [27m │ [7mManager     [27m │ [7mInactive  [27m │
│ <cyan>4    </fg> │ <cyan>David          </fg> │ <cyan>Developer   </fg> │ <cyan>Active    </fg> │
│ <cyan>5    </fg> │ <cyan>Eve            </fg> │ <cyan>Designer    </fg> │ <cyan>Active    </fg> │
└───────┴─────────────────┴──────────────┴────────────┘
<green>5 selected</fg> • <dim>Row 3/5</bold>"
`;

exports[`table-interactive-visual > Selection states > should render with multiple rows selected 1`] = `
"┌───────┬─────────────────┬──────────────┬────────────┐
│ <bold>ID   </bold> │ <bold>Name           </bold> │ <bold>Role        </bold> │ <bold>Status    </bold> │
├───────┼─────────────────┼──────────────┼────────────┤
│ <cyan>1    </fg> │ <cyan>Alice          </fg> │ <cyan>Developer   </fg> │ <cyan>Active    </fg> │
│ <cyan>2    </fg> │ <cyan>Bob            </fg> │ <cyan>Designer    </fg> │ <cyan>Active    </fg> │
│ 3     │ Charlie         │ Manager      │ Inactive   │
│ [7m4    [27m │ [7mDavid          [27m │ [7mDeveloper   [27m │ [7mActive    [27m │
│ 5     │ Eve             │ Designer     │ Active     │
└───────┴─────────────────┴──────────────┴────────────┘
<green>3 selected</fg> • <dim>Row 4/5</bold>"
`;

exports[`table-interactive-visual > Selection states > should render with single row selected 1`] = `
"┌───────┬─────────────────┬──────────────┬────────────┐
│ <bold>ID   </bold> │ <bold>Name           </bold> │ <bold>Role        </bold> │ <bold>Status    </bold> │
├───────┼─────────────────┼──────────────┼────────────┤
│ [7m1    [27m │ [7mAlice          [27m │ [7mDeveloper   [27m │ [7mActive    [27m │
│ 2     │ Bob             │ Designer     │ Active     │
│ 3     │ Charlie         │ Manager      │ Inactive   │
│ 4     │ David           │ Developer    │ Active     │
│ 5     │ Eve             │ Designer     │ Active     │
└───────┴─────────────────┴──────────────┴────────────┘
<green>1 selected</fg> • <dim>Row 1/5</bold>"
`;

exports[`table-interactive-visual > Selection states > should show selection count in status bar 1`] = `
"┌───────┬─────────────────┬──────────────┬────────────┐
│ <bold>ID   </bold> │ <bold>Name           </bold> │ <bold>Role        </bold> │ <bold>Status    </bold> │
├───────┼─────────────────┼──────────────┼────────────┤
│ <cyan>1    </fg> │ <cyan>Alice          </fg> │ <cyan>Developer   </fg> │ <cyan>Active    </fg> │
│ [7m2    [27m │ [7mBob            [27m │ [7mDesigner    [27m │ [7mActive    [27m │
│ 3     │ Charlie         │ Manager      │ Inactive   │
│ 4     │ David           │ Developer    │ Active     │
│ 5     │ Eve             │ Designer     │ Active     │
└───────┴─────────────────┴──────────────┴────────────┘
<green>2 selected</fg> • <dim>Row 2/5</bold>"
`;

exports[`table-interactive-visual > Sort indicators > should render sorted data in correct order 1`] = `
"┌───────┬─────────────────┬──────────────┬────────────┐
│ <bold>ID   </bold> │ <bold>Name ↑         </bold> │ <bold>Role        </bold> │ <bold>Status    </bold> │
├───────┼─────────────────┼──────────────┼────────────┤
│ [7m1    [27m │ [7mAlice          [27m │ [7mDeveloper   [27m │ [7mActive    [27m │
│ 2     │ Bob             │ Designer     │ Active     │
│ 3     │ Charlie         │ Manager      │ Inactive   │
│ 4     │ David           │ Developer    │ Active     │
│ 5     │ Eve             │ Designer     │ Active     │
└───────┴─────────────────┴──────────────┴────────────┘
<dim>Row 1/5</bold>"
`;

exports[`table-interactive-visual > Sort indicators > should render with ascending sort indicator 1`] = `
"┌───────┬─────────────────┬──────────────┬────────────┐
│ <bold>ID   </bold> │ <bold>Name ↑         </bold> │ <bold>Role        </bold> │ <bold>Status    </bold> │
├───────┼─────────────────┼──────────────┼────────────┤
│ [7m1    [27m │ [7mAlice          [27m │ [7mDeveloper   [27m │ [7mActive    [27m │
│ 2     │ Bob             │ Designer     │ Active     │
│ 3     │ Charlie         │ Manager      │ Inactive   │
│ 4     │ David           │ Developer    │ Active     │
│ 5     │ Eve             │ Designer     │ Active     │
└───────┴─────────────────┴──────────────┴────────────┘
<dim>Row 1/5</bold>"
`;

exports[`table-interactive-visual > Sort indicators > should render with descending sort indicator 1`] = `
"┌───────┬─────────────────┬──────────────┬────────────┐
│ <bold>ID   </bold> │ <bold>Name ↓         </bold> │ <bold>Role        </bold> │ <bold>Status    </bold> │
├───────┼─────────────────┼──────────────┼────────────┤
│ [7m5    [27m │ [7mEve            [27m │ [7mDesigner    [27m │ [7mActive    [27m │
│ 4     │ David           │ Developer    │ Active     │
│ 3     │ Charlie         │ Manager      │ Inactive   │
│ 2     │ Bob             │ Designer     │ Active     │
│ 1     │ Alice           │ Developer    │ Active     │
└───────┴─────────────────┴──────────────┴────────────┘
<dim>Row 1/5</bold>"
`;

exports[`table-interactive-visual > Status bar variations > should show all status components together 1`] = `
"┌───────┬─────────────────┬──────────────┬────────────┐
│ <bold>ID   </bold> │ <bold>Name           </bold> │ <bold>Role        </bold> │ <bold>Status    </bold> │
├───────┼─────────────────┼──────────────┼────────────┤
│ <cyan>1    </fg> │ <cyan>Alice          </fg> │ <cyan>Developer   </fg> │ <cyan>Active    </fg> │
│ [7m4    [27m │ [7mDavid          [27m │ [7mDeveloper   [27m │ [7mActive    [27m │
└───────┴─────────────────┴──────────────┴────────────┘
<green>2 selected</fg> • <yellow>Filter: Developer</fg> <dim>2/5</bold> • <dim>Row 2/2</bold>"
`;

exports[`table-interactive-visual > Status bar variations > should show filter query and count 1`] = `
"┌───────┬─────────────────┬──────────────┬────────────┐
│ <bold>ID   </bold> │ <bold>Name           </bold> │ <bold>Role        </bold> │ <bold>Status    </bold> │
├───────┼─────────────────┼──────────────┼────────────┤
│ [7m1    [27m │ [7mAlice          [27m │ [7mDeveloper   [27m │ [7mActive    [27m │
│ 2     │ Bob             │ Designer     │ Active     │
│ 3     │ Charlie         │ Manager      │ Inactive   │
│ 4     │ David           │ Developer    │ Active     │
│ 5     │ Eve             │ Designer     │ Active     │
└───────┴─────────────────┴──────────────┴────────────┘
<yellow>Filter: Active</fg> <dim>5/5</bold> • <dim>Row 1/5</bold>"
`;

exports[`table-interactive-visual > Status bar variations > should show row position in status bar 1`] = `
"┌───────┬─────────────────┬──────────────┬────────────┐
│ <bold>ID   </bold> │ <bold>Name           </bold> │ <bold>Role        </bold> │ <bold>Status    </bold> │
├───────┼─────────────────┼──────────────┼────────────┤
│ 1     │ Alice           │ Developer    │ Active     │
│ 2     │ Bob             │ Designer     │ Active     │
│ [7m3    [27m │ [7mCharlie        [27m │ [7mManager     [27m │ [7mInactive  [27m │
│ 4     │ David           │ Developer    │ Active     │
│ 5     │ Eve             │ Designer     │ Active     │
└───────┴─────────────────┴──────────────┴────────────┘
<dim>Row 3/5</bold>"
`;

exports[`table-interactive-visual > Status bar variations > should show selection count when items selected 1`] = `
"┌───────┬─────────────────┬──────────────┬────────────┐
│ <bold>ID   </bold> │ <bold>Name           </bold> │ <bold>Role        </bold> │ <bold>Status    </bold> │
├───────┼─────────────────┼──────────────┼────────────┤
│ [7m1    [27m │ [7mAlice          [27m │ [7mDeveloper   [27m │ [7mActive    [27m │
│ <cyan>2    </fg> │ <cyan>Bob            </fg> │ <cyan>Designer    </fg> │ <cyan>Active    </fg> │
│ <cyan>3    </fg> │ <cyan>Charlie        </fg> │ <cyan>Manager     </fg> │ <cyan>Inactive  </fg> │
│ <cyan>4    </fg> │ <cyan>David          </fg> │ <cyan>Developer   </fg> │ <cyan>Active    </fg> │
│ <cyan>5    </fg> │ <cyan>Eve            </fg> │ <cyan>Designer    </fg> │ <cyan>Active    </fg> │
└───────┴─────────────────┴──────────────┴────────────┘
<green>5 selected</fg> • <dim>Row 1/5</bold>"
`;

exports[`table-interactive-visual > Visual focus indicators > should combine focus and selection styling 1`] = `
"┌───────┬─────────────────┬──────────────┬────────────┐
│ <bold>ID   </bold> │ <bold>Name           </bold> │ <bold>Role        </bold> │ <bold>Status    </bold> │
├───────┼─────────────────┼──────────────┼────────────┤
│ [7m1    [27m │ [7mAlice          [27m │ [7mDeveloper   [27m │ [7mActive    [27m │
│ 2     │ Bob             │ Designer     │ Active     │
│ 3     │ Charlie         │ Manager      │ Inactive   │
│ 4     │ David           │ Developer    │ Active     │
│ 5     │ Eve             │ Designer     │ Active     │
└───────┴─────────────────┴──────────────┴────────────┘
<green>1 selected</fg> • <dim>Row 1/5</bold>"
`;

exports[`table-interactive-visual > Visual focus indicators > should highlight focused row with inverse colors 1`] = `
"┌───────┬─────────────────┬──────────────┬────────────┐
│ <bold>ID   </bold> │ <bold>Name           </bold> │ <bold>Role        </bold> │ <bold>Status    </bold> │
├───────┼─────────────────┼──────────────┼────────────┤
│ 1     │ Alice           │ Developer    │ Active     │
│ [7m2    [27m │ [7mBob            [27m │ [7mDesigner    [27m │ [7mActive    [27m │
│ 3     │ Charlie         │ Manager      │ Inactive   │
│ 4     │ David           │ Developer    │ Active     │
│ 5     │ Eve             │ Designer     │ Active     │
└───────┴─────────────────┴──────────────┴────────────┘
<dim>Row 2/5</bold>"
`;

exports[`table-interactive-visual > Visual focus indicators > should show selected rows with cyan color 1`] = `
"┌───────┬─────────────────┬──────────────┬────────────┐
│ <bold>ID   </bold> │ <bold>Name           </bold> │ <bold>Role        </bold> │ <bold>Status    </bold> │
├───────┼─────────────────┼──────────────┼────────────┤
│ <cyan>1    </fg> │ <cyan>Alice          </fg> │ <cyan>Developer   </fg> │ <cyan>Active    </fg> │
│ 2     │ Bob             │ Designer     │ Active     │
│ [7m3    [27m │ [7mCharlie        [27m │ [7mManager     [27m │ [7mInactive  [27m │
│ 4     │ David           │ Developer    │ Active     │
│ 5     │ Eve             │ Designer     │ Active     │
└───────┴─────────────────┴──────────────┴────────────┘
<green>2 selected</fg> • <dim>Row 3/5</bold>"
`;
